--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:ci": "ng test --browsers ChromeHeadless",
     "server": "json-server --watch db.json --port 4004",
     "serve:ssr:product-master": "node dist/product-master/server/server.mjs",
-    "start": "npm run server && npm run serve:ssr:product-master"
+    "start": "npm run serve:ssr:product-master",
+    "start:dev": "npm run server && npm run serve:ssr:product-master"
   },
   "private": true,
   "dependencies": {
