--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngrx/store-devtools": "^17.1.0",
     "express": "^4.18.2",
     "json-server": "^1.0.0-alpha.23",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
